--- a/privacy.html
+++ b/privacy.html
@@ -139,4 +139,4 @@
 <h1>Contact Us</h1>
 <p>If you have any questions about this Privacy Policy, You can contact us:</p>
 <ul>
-<li>By email: tango129@163.com</li>
+<li>By email: icolors2023@163.com</li>
